Fix alignment for Chrome.

--- a/csfieldguide/static/interactives/pixel-viewer/scss/pixel-viewer.scss
+++ b/csfieldguide/static/interactives/pixel-viewer/scss/pixel-viewer.scss
@@ -104,3 +104,7 @@
 #freeze-warning {
   color: red;
 }
+
+#R_lt_or_gt {
+  margin-left: 5px !important;
+}
